use-case-c-programmatic-access-using-k8s-token/my-profile/user-waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint
  namespace: my-profile
  labels:
    istio.io/waypoint-for: service # Both traffic to service and pods go through the waypoint. Default is services.
spec:
  gatewayClassName: istio-waypoint  # <- Important!
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
