use-case-c-programmatic-access-using-k8s-token/my-profile/ns-ap-l4-waypoint.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ns-l4-waypoint
  namespace: my-profile
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/my-profile/sa/waypoint
